# tktop

./: .coverage  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  devbox.json  pyproject.toml
.codex/skills/tktop-release/: SKILL.md
.codex/skills/tktop-release/agents/: openai.yaml
.codex/skills/tktop-release/scripts/: release_info.py  validate_target.py
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-06-08-tktop.md  2026-06-13-codex-support.md  2026-06-13-pip-distribution.md
docs/specs/: 2026-06-08-tktop-design.md
docs/superpowers/plans/: 2026-06-08-tktop.md
docs/superpowers/specs/: 2026-06-08-tktop-design.md
scripts/: check_deployment.py  release.py  test_package.py
src/tktop/: __init__.py  cli.py  config.py  deployment.py  diagnostics.py  release.py
src/tktop/adapter/: claude.py  codex.py  factory.py  protocol.py
src/tktop/coach/: __init__.py  cache.py  model_advisor.py  prompt.py  rules.py  types.py
src/tktop/llm/: anthropic_provider.py  factory.py  labels.py  ollama.py  openai_provider.py  prompt.py  protocol.py  usage.py  vertex.py
src/tktop/metrics/: aggregator.py  drift.py  pricing.py  types.py
src/tktop/tui/: app.py  llm_meter.py  styles.tcss
src/tktop/tui/screens/: analysis.py  coach.py  dashboard.py  help.py  history.py  overview.py  provider_picker.py  turn_detail.py
src/tktop/tui/widgets/: alert_panel.py  cost_graph.py  session_card.py  token_bars.py  token_graph.py  tool_table.py
tests/: conftest.py  test_adapter_claude.py  test_adapter_codex.py  test_aggregator.py  test_cli.py  test_coach.py  test_config.py  test_config_settings.py  test_cost_graph.py  test_deployment.py  test_diagnostics.py  test_drift.py  test_history.py  test_integration.py  test_integration_codex.py  test_integration_fixtures.py  test_llm_factory.py  test_llm_ollama.py  test_llm_usage.py  test_pricing.py  test_prompt.py  test_release.py  test_session_title.py  test_token_bars.py  test_types.py
tests/fixtures/: codex_session.jsonl  codex_session_index.jsonl  session_simple.json  transcript_drift.jsonl  transcript_simple.jsonl  transcript_with_tools.jsonl
