[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tktop"
version = "0.1.0"
description = "Token monitor for coding agents — like htop for AI spend"
requires-python = ">=3.13"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "watchfiles>=0.21.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tktop = "tktop.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
