[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tktop"
version = "0.1.0"
description = "Token monitor for coding agents — like htop for AI spend"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Harisan Sankar" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "watchfiles>=0.21.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/chanilharisankar/tktop"
Repository = "https://github.com/chanilharisankar/tktop"
Issues = "https://github.com/chanilharisankar/tktop/issues"

[project.scripts]
tktop = "tktop.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "S",    # bandit (security) via ruff
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "S603",  # subprocess call - we need this for gcloud
    "S607",  # partial executable path - we need this for gcloud
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.bandit]
exclude_dirs = ["tests"]
